--- a/notebooks/01_tabular_data_exploration.ipynb
+++ b/notebooks/01_tabular_data_exploration.ipynb
@@ -540,12 +540,15 @@
     "We made important observations (which will be discussed later in more detail):\n",
     "\n",
     "* if your target variable is imbalanced (e.g., you have more samples from one\n",
-    "  target category than another), you may need special techniques for training\n",
-    "  and evaluating your machine learning model;\n",
-    "* having redundant (or highly correlated) columns can be a problem for some\n",
-    "  machine learning algorithms;\n",
-    "* contrary to decision tree, linear models can only capture linear\n",
-    "  interactions, so be aware of non-linear relationships in your data."
+    "  target category than another), you may need to be careful when interpreting\n",
+    "  the values of performance metrics;\n",
+    "* columns can be redundant (or highly correlated), which is not necessarily a\n",
+    "  problem, but may require special treatment as we will cover in future\n",
+    "  notebooks;\n",
+    "* decision trees create prediction rules by comparing each feature to a\n",
+    "  threshold value, resulting in decision boundaries that are always parallel\n",
+    "  to the axes. In 2D, this means the boundaries are vertical or horizontal\n",
+    "  line segments at the feature threshold values."
    ]
   }
  ],
