--- a/notebooks/cross_validation_learning_curve.ipynb
+++ b/notebooks/cross_validation_learning_curve.ipynb
@@ -151,10 +151,14 @@
     "benefit to adding samples anymore or assessing the potential gain of adding\n",
     "more samples into the training set.\n",
     "\n",
-    "If we achieve a plateau and adding new samples in the training set does not\n",
-    "reduce the testing error, we might have reached the Bayes error rate using the\n",
-    "available model. Using a more complex model might be the only possibility to\n",
-    "reduce the testing error further.\n",
+    "If the testing error plateaus despite adding more training samples, it's\n",
+    "possible that the model has achieved its optimal performance. In this case,\n",
+    "using a more expressive model might help reduce the error further. Otherwise,\n",
+    "the error may have reached the Bayes error rate, the theoretical minimum error\n",
+    "due to inherent uncertainty not resolved by the available data. This minimum error is\n",
+    "non-zero whenever some of the variation of the target variable `y` depends on\n",
+    "external factors not fully observed in the features available in `X`, which is\n",
+    "almost always the case in practice.\n",
     "\n",
     "## Summary\n",
     "\n",
