--- a/notebooks/linear_models_feature_engineering_classification.ipynb
+++ b/notebooks/linear_models_feature_engineering_classification.ipynb
@@ -452,7 +452,7 @@
     "from the previous models: its decision boundary can take a diagonal\n",
     "direction. Furthermore, we can observe that predictions are very confident in\n",
     "the low density regions of the feature space, even very close to the decision\n",
-    "boundary\n",
+    "boundary.\n",
     "\n",
     "We can obtain very similar results by using a kernel approximation technique\n",
     "such as the Nystr\u00f6m method with a polynomial kernel:"
