--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -214,7 +214,7 @@
     "by name or position. In the code above `logistic_regression[-1]` means the\n",
     "last step of the pipeline. Then you can access the attributes of that step such\n",
     "as `coef_`. Notice also that the `coef_` attribute is an array of shape (1,\n",
-    "`n_features`) an then we access it via its first entry. Alternatively one\n",
+    "`n_features`) and then we access it via its first entry. Alternatively one\n",
     "could use `coef_.ravel()`.\n",
     "\n",
     "We are now ready to visualize the weight values as a barplot:"
