--- a/notebooks/metrics_classification.ipynb
+++ b/notebooks/metrics_classification.ipynb
@@ -556,7 +556,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prevalence = target_test.value_counts()[1] / target_test.value_counts().sum()\n",
+    "prevalence = (\n",
+    "    target_test.value_counts()[\"donated\"] / target_test.value_counts().sum()\n",
+    ")\n",
     "print(f\"Prevalence of the class 'donated': {prevalence:.2f}\")"
    ]
   },
