--- a/notebooks/parameter_tuning_sol_03.ipynb
+++ b/notebooks/parameter_tuning_sol_03.ipynb
@@ -249,7 +249,7 @@
     "holding on any axis of the parallel coordinate plot. You can then slide (move)\n",
     "the range selection and cross two selections to see the intersections.\n",
     "\n",
-    "Selecting the best performing models (i.e. above an accuracy of ~0.68), we\n",
+    "Selecting the best performing models (i.e. above R2 score of ~0.68), we\n",
     "observe that **in this case**:\n",
     "\n",
     "- scaling the data is important. All the best performing models use scaled\n",
