Revert "update explanation on nr of trees in GBDT"
This reverts commit 9f985b489a438bf350fd1d5bf8181690c40176ae.

--- a/notebooks/ensemble_sol_03.ipynb
+++ b/notebooks/ensemble_sol_03.ipynb
@@ -129,21 +129,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random forest models improve when increasing the number of trees in the\n",
-    "ensemble. However, the scores reach a plateau where adding new trees just\n",
-    "makes fitting and scoring slower.\n",
+    "Both gradient boosting and random forest models improve when increasing the\n",
+    "number of trees in the ensemble. However, the scores reach a plateau where\n",
+    "adding new trees just makes fitting and scoring slower.\n",
     "\n",
-    "Gradient boosting models overfit when the number of trees is too large. To\n",
-    "avoid adding a new unnecessary tree, unlike random-forest gradient-boosting\n",
+    "To avoid adding new unnecessary tree, unlike random-forest gradient-boosting\n",
     "offers an early-stopping option. Internally, the algorithm uses an\n",
     "out-of-sample set to compute the generalization performance of the model at\n",
     "each addition of a tree. Thus, if the generalization performance is not\n",
     "improving for several iterations, it stops adding trees.\n",
     "\n",
     "Now, create a gradient-boosting model with `n_estimators=1_000`. This number\n",
-    "of trees is certainly too large. Change the parameter `n_iter_no_change`\n",
-    "such that the gradient boosting fitting stops after adding 5 trees to avoid\n",
-    "deterioration of the overall generalization performance."
+    "of trees is certainly too large. Change the parameter `n_iter_no_change` such\n",
+    "that the gradient boosting fitting stops after adding 5 trees that do not\n",
+    "improve the overall generalization performance."
    ]
   },
   {
@@ -168,7 +167,7 @@
    "source": [
     "We see that the number of trees used is far below 1000 with the current\n",
     "dataset. Training the gradient boosting model with the entire 1000 trees would\n",
-    "have been harmful."
+    "have been useless."
    ]
   },
   {
