--- a/notebooks/ensemble_sol_03.ipynb
+++ b/notebooks/ensemble_sol_03.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "We see that the number of trees used is far below 1000 with the current\n",
     "dataset. Training the gradient boosting model with the entire 1000 trees would\n",
-    "have been harmful."
+    "have been detrimental."
    ]
   },
   {
