MNT Update notebooks

--- a/notebooks/ensemble_hyperparameters.ipynb
+++ b/notebooks/ensemble_hyperparameters.ipynb
@@ -199,15 +199,15 @@
     "residuals are corrected and then less learners are required. Therefore,\n",
     "it can be beneficial to increase `max_iter` if `max_depth` is low.\n",
     "\n",
-    "Finally, we have overlooked the impact of the `learning_rate` parameter until\n",
-    "now. When fitting the residuals, we would like the tree to try to correct all\n",
-    "possible errors or only a fraction of them. The learning-rate allows you to\n",
-    "control this behaviour. A small learning-rate value would only correct the\n",
-    "residuals of very few samples. If a large learning-rate is set (e.g., 1), we\n",
-    "would fit the residuals of all samples. So, with a very low learning-rate, we\n",
-    "would need more estimators to correct the overall error. However, a too large\n",
-    "learning-rate tends to obtain an overfitted ensemble, similar to having very\n",
-    "deep trees."
+    "Finally, we have overlooked the impact of the `learning_rate` parameter\n",
+    "until now. This parameter controls how much each correction contributes to the\n",
+    "final prediction. A smaller learning-rate means the corrections of a new\n",
+    "tree result in small adjustments to the model prediction. When the\n",
+    "learning-rate is small, the model generally needs more trees to achieve good\n",
+    "performance. A higher learning-rate makes larger adjustments with each tree,\n",
+    "which requires fewer trees and trains faster, at the risk of overfitting. The\n",
+    "learning-rate needs to be tuned by hyperparameter tuning to obtain the best\n",
+    "value that results in a model with good generalization performance."
    ]
   },
   {
