--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -250,7 +250,7 @@
     "<p>Be aware that the evaluation should normally be performed through\n",
     "cross-validation by providing <tt class=\"docutils literal\">model_grid_search</tt> as a model to the\n",
     "<tt class=\"docutils literal\">cross_validate</tt> function.</p>\n",
-    "<p class=\"last\">Here, we used a single train-test split to to evaluate <tt class=\"docutils literal\">model_grid_search</tt>. In\n",
+    "<p class=\"last\">Here, we used a single train-test split to evaluate <tt class=\"docutils literal\">model_grid_search</tt>. In\n",
     "a future notebook will go into more detail about nested cross-validation, when\n",
     "you use cross-validation both for hyperparameter tuning and model evaluation.</p>\n",
     "</div>"
