--- a/notebooks/cross_validation_time.ipynb
+++ b/notebooks/cross_validation_time.ipynb
@@ -16,11 +16,13 @@
     "(as in \"independent and identically distributed random variables\").</p>\n",
     "</div>\n",
     "\n",
-    "This assumption is usually violated when dealing with time series. A sample\n",
-    "depends on past information.\n",
+    "This assumption is usually violated in time series, where each sample can be\n",
+    "influenced by previous samples (both their feature and target values) in an\n",
+    "inherently ordered sequence.\n",
     "\n",
-    "We will take an example to highlight such issues with non-i.i.d. data in the\n",
-    "previous cross-validation strategies presented. We are going to load financial\n",
+    "In this notebook we demonstrate the issues that arise when using the\n",
+    "cross-validation strategies we have presented so far, along with non-i.i.d.\n",
+    "data. For such purpose we load financial\n",
     "quotations from some energy companies."
    ]
   },
@@ -91,7 +93,13 @@
     "data, target = quotes.drop(columns=[\"Chevron\"]), quotes[\"Chevron\"]\n",
     "data_train, data_test, target_train, target_test = train_test_split(\n",
     "    data, target, shuffle=True, random_state=0\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Shuffling breaks the index order, but we still want it to be time-ordered\n",
+    "data_train.sort_index(ascending=True, inplace=True)\n",
+    "data_test.sort_index(ascending=True, inplace=True)\n",
+    "target_train.sort_index(ascending=True, inplace=True)\n",
+    "target_test.sort_index(ascending=True, inplace=True)"
    ]
   },
   {
@@ -99,7 +107,7 @@
    "metadata": {},
    "source": [
     "We will use a decision tree regressor that we expect to overfit and thus not\n",
-    "generalize to unseen data. We will use a `ShuffleSplit` cross-validation to\n",
+    "generalize to unseen data. We use a `ShuffleSplit` cross-validation to\n",
     "check the generalization performance of our model.\n",
     "\n",
     "Let's first define our model"
@@ -138,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we perform the evaluation."
+    "We then perform the evaluation using the `ShuffleSplit` strategy."
    ]
   },
   {
@@ -161,8 +169,10 @@
    "source": [
     "Surprisingly, we get outstanding generalization performance. We will\n",
     "investigate and find the reason for such good results with a model that is\n",
-    "expected to fail. We previously mentioned that `ShuffleSplit` is an iterative\n",
-    "cross-validation scheme that shuffles data and split. We will simplify this\n",
+    "expected to fail. We previously mentioned that `ShuffleSplit` is a\n",
+    "cross-validation method that iteratively shuffles and splits the data.\n",
+    "\n",
+    "We can simplify the\n",
     "procedure with a single split and plot the prediction. We can use\n",
     "`train_test_split` for this purpose."
    ]
@@ -202,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, we obtain good results in terms of $R^2$. We will plot the\n",
+    "Similarly, we obtain good results in terms of $R^2$. We now plot the\n",
     "training, testing and prediction samples."
    ]
   },
@@ -225,18 +235,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So in this context, it seems that the model predictions are following the\n",
-    "testing. But we can also see that the testing samples are next to some\n",
-    "training sample. And with these time-series, we see a relationship between a\n",
-    "sample at the time `t` and a sample at `t+1`. In this case, we are violating\n",
-    "the i.i.d. assumption. The insight to get is the following: a model can output\n",
-    "of its training set at the time `t` for a testing sample at the time `t+1`.\n",
-    "This prediction would be close to the true value even if our model did not\n",
-    "learn anything, but just memorized the training dataset.\n",
+    "From the plot above, we can see that the training and testing samples are\n",
+    "alternating. This structure effectively evaluates the model\u2019s ability to\n",
+    "interpolate between neighboring data points, rather than its true\n",
+    "generalization ability. As a result, the model\u2019s predictions are close to the\n",
+    "actual values, even if it has not learned anything meaningful from the data.\n",
+    "This is a form of **data leakage**, where the model gains access to future\n",
+    "information (testing data) while training, leading to an over-optimistic\n",
+    "estimate of the generalization performance.\n",
     "\n",
-    "An easy way to verify this hypothesis is to not shuffle the data when doing\n",
+    "An easy way to verify this is to not shuffle the data during\n",
     "the split. In this case, we will use the first 75% of the data to train and\n",
-    "the remaining data to test."
+    "the remaining data to test. This way we preserve the time order of the data, and\n",
+    "ensure training on past data and evaluating on future data."
    ]
   },
   {
@@ -343,9 +354,7 @@
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
     "cv = TimeSeriesSplit(n_splits=groups.nunique())\n",
-    "test_score = cross_val_score(\n",
-    "    regressor, data, target, cv=cv, groups=groups, n_jobs=2\n",
-    ")\n",
+    "test_score = cross_val_score(regressor, data, target, cv=cv, n_jobs=2)\n",
     "print(f\"The mean R2 is: {test_score.mean():.2f} \u00b1 {test_score.std():.2f}\")"
    ]
   },
@@ -353,10 +362,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In conclusion, it is really important to not use an out of the shelves\n",
+    "In conclusion, it is really important not to carelessly use a\n",
     "cross-validation strategy which do not respect some assumptions such as having\n",
-    "i.i.d data. It might lead to absurd results which could make think that a\n",
-    "predictive model might work."
+    "i.i.d data. It might lead to misleading outcomes, creating the false\n",
+    "impression that a predictive model performs well when it may not be the case\n",
+    "in the intended real-world scenario."
    ]
   }
  ],
