Sync notebooks and exercises

--- a/notebooks/datasets_bike_rides.ipynb
+++ b/notebooks/datasets_bike_rides.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_ride.resample(\"60S\").mean().plot()\n",
+    "data_ride.resample(\"60s\").mean().plot()\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "_ = plt.title(\"Sensor values for different cyclist measurements\")"
    ]
