--- a/notebooks/ensemble_adaboost.ipynb
+++ b/notebooks/ensemble_adaboost.ipynb
@@ -271,7 +271,7 @@
     "\n",
     "estimator = DecisionTreeClassifier(max_depth=3, random_state=0)\n",
     "adaboost = AdaBoostClassifier(\n",
-    "    estimator=estimator, n_estimators=3, algorithm=\"SAMME\", random_state=0\n",
+    "    estimator=estimator, n_estimators=3, random_state=0\n",
     ")\n",
     "adaboost.fit(data, target)"
    ]
