--- a/notebooks/linear_models_regularization.ipynb
+++ b/notebooks/linear_models_regularization.ipynb
@@ -618,7 +618,7 @@
     "ridge = make_pipeline(\n",
     "    MinMaxScaler(),\n",
     "    PolynomialFeatures(degree=2, include_bias=False),\n",
-    "    RidgeCV(alphas=alphas, store_cv_values=True),\n",
+    "    RidgeCV(alphas=alphas, store_cv_results=True),\n",
     ")"
    ]
   },
@@ -677,7 +677,7 @@
     "It indicates that our model is not overfitting.\n",
     "\n",
     "When fitting the ridge regressor, we also requested to store the error found\n",
-    "during cross-validation (by setting the parameter `store_cv_values=True`). We\n",
+    "during cross-validation (by setting the parameter `store_cv_results=True`). We\n",
     "can plot the mean squared error for the different `alphas` regularization\n",
     "strengths that we tried. The error bars represent one standard deviation of the\n",
     "average mean square error across folds for a given value of `alpha`."
@@ -690,7 +690,7 @@
    "outputs": [],
    "source": [
     "mse_alphas = [\n",
-    "    est[-1].cv_values_.mean(axis=0) for est in cv_results[\"estimator\"]\n",
+    "    est[-1].cv_results_.mean(axis=0) for est in cv_results[\"estimator\"]\n",
     "]\n",
     "cv_alphas = pd.DataFrame(mse_alphas, columns=alphas)\n",
     "cv_alphas = cv_alphas.aggregate([\"mean\", \"std\"]).T\n",
