--- a/notebooks/parameter_tuning_randomized_search.ipynb
+++ b/notebooks/parameter_tuning_randomized_search.ipynb
@@ -121,6 +121,7 @@
     "preprocessor = ColumnTransformer(\n",
     "    [(\"cat_preprocessor\", categorical_preprocessor, categorical_columns)],\n",
     "    remainder=\"passthrough\",\n",
+    "    force_int_remainder_cols=False,  # Silence a warning in scikit-learn v1.6.\n",
     ")"
    ]
   },
