--- a/notebooks/metrics_ex_02.ipynb
+++ b/notebooks/metrics_ex_02.ipynb
@@ -80,8 +80,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, instead of using the $R^2$ score, use the mean absolute error. You need\n",
-    "to refer to the documentation for the `scoring` parameter."
+    "Then, instead of using the $R^2$ score, use the mean absolute error (MAE). You\n",
+    "may need to refer to the documentation for the `scoring` parameter."
    ]
   },
   {
@@ -100,6 +100,15 @@
     "Finally, use the `cross_validate` function and compute multiple scores/errors\n",
     "at once by passing a list of scorers to the `scoring` parameter. You can\n",
     "compute the $R^2$ score and the mean absolute error for instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write your code here."
    ]
   },
   {
