--- a/notebooks/parameter_tuning_ex_02.ipynb
+++ b/notebooks/parameter_tuning_ex_02.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "Use the previously defined model (called `model`) and using two nested `for`\n",
     "loops, make a search of the best combinations of the `learning_rate` and\n",
-    "`max_leaf_nodes` parameters. In this regard, you have to train and test the\n",
+    "`max_leaf_nodes` parameters. In this regard, you need to train and test the\n",
     "model by setting the parameters. The evaluation of the model should be\n",
     "performed using `cross_val_score` on the training set. Use the following\n",
     "parameters search:\n",
