--- a/notebooks/parameter_tuning_ex_03.ipynb
+++ b/notebooks/parameter_tuning_ex_03.ipynb
@@ -31,8 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this exercise, we progressively define the regression pipeline and\n",
-    "later tune its hyperparameters.\n",
+    "In this exercise, we progressively define the regression pipeline and later\n",
+    "tune its hyperparameters.\n",
     "\n",
     "Start by defining a pipeline that:\n",
     "* uses a `StandardScaler` to normalize the numerical data;\n",
