Explain error_score

--- a/notebooks/metrics_ex_01.ipynb
+++ b/notebooks/metrics_ex_01.ipynb
@@ -112,7 +112,9 @@
     "\n",
     "tree = DecisionTreeClassifier()\n",
     "try:\n",
-    "    scores = cross_val_score(tree, data, target, cv=10, scoring=\"precision\")\n",
+    "    scores = cross_val_score(\n",
+    "        tree, data, target, cv=10, scoring=\"precision\", error_score=\"raise\"\n",
+    "    )\n",
     "except ValueError as exc:\n",
     "    print(exc)"
    ]
