--- a/notebooks/metrics_sol_01.ipynb
+++ b/notebooks/metrics_sol_01.ipynb
@@ -125,7 +125,7 @@
     "tree = DecisionTreeClassifier()\n",
     "try:\n",
     "    scores = cross_val_score(\n",
-    "        tree, data, target, cv=10, scoring=\"precision\", error_on_score=\"raise\"\n",
+    "        tree, data, target, cv=10, scoring=\"precision\", error_score=\"raise\"\n",
     "    )\n",
     "except ValueError as exc:\n",
     "    print(exc)"
@@ -137,7 +137,10 @@
    "source": [
     "<div class=\"admonition tip alert alert-warning\">\n",
     "<p class=\"first admonition-title\" style=\"font-weight: bold;\">Tip</p>\n",
-    "<p class=\"last\">We catch the exception with a <tt class=\"docutils literal\">try</tt>/<tt class=\"docutils literal\">except</tt> pattern to be able to print it.</p>\n",
+    "<p class=\"last\">We catch the exception with a <tt class=\"docutils literal\">try</tt>/<tt class=\"docutils literal\">except</tt> pattern to be able to print it.\n",
+    "We also set the <tt class=\"docutils literal\">error_score</tt> parameter to <tt class=\"docutils literal\">raise</tt> to raise the exception\n",
+    "as early as possible. Otherwise, this code would raise a warning in the output\n",
+    "for each cross-validation fold before raising the exception.</p>\n",
     "</div>\n",
     "We get an exception because the default scorer has its positive label set to\n",
     "one (`pos_label=1`), which is not our case (our positive label is \"donated\").\n",
