--- a/notebooks/trees_sol_01.ipynb
+++ b/notebooks/trees_sol_01.ipynb
@@ -219,8 +219,8 @@
     "For example, in the plot below, the first plot on the left shows the\n",
     "certainty of classifying a data point as belonging to the \"Adelie\" class. The\n",
     "darker the color, the more certain the model is that a given point in the\n",
-    "feature space belongs to a given class the predictions. The same logic\n",
-    "applies to the other plots in the figure."
+    "feature space belongs to a given class. The same logic applies to the other\n",
+    "plots in the figure."
    ]
   },
   {
