More missing sync

--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -407,7 +407,12 @@
     "import seaborn as sns\n",
     "\n",
     "ax = sns.heatmap(\n",
-    "    pivoted_cv_results, annot=True, cmap=\"YlGnBu\", vmin=0.7, vmax=0.9\n",
+    "    pivoted_cv_results,\n",
+    "    annot=True,\n",
+    "    cmap=\"YlGnBu\",\n",
+    "    vmin=0.7,\n",
+    "    vmax=0.9,\n",
+    "    cbar_kws={\"label\": \"mean test accuracy\"},\n",
     ")\n",
     "ax.invert_yaxis()"
    ]
