sync solution notebook

--- a/notebooks/ensemble_sol_03.ipynb
+++ b/notebooks/ensemble_sol_03.ipynb
@@ -108,8 +108,8 @@
     "param_range = np.array([1, 2, 5, 10, 20, 50, 100])\n",
     "disp = ValidationCurveDisplay.from_estimator(\n",
     "    forest,\n",
-    "    data,\n",
-    "    target,\n",
+    "    data_train,\n",
+    "    target_train,\n",
     "    param_name=\"n_estimators\",\n",
     "    param_range=param_range,\n",
     "    scoring=\"neg_mean_absolute_error\",\n",
