--- a/notebooks/metrics_sol_01.ipynb
+++ b/notebooks/metrics_sol_01.ipynb
@@ -137,10 +137,12 @@
    "source": [
     "<div class=\"admonition tip alert alert-warning\">\n",
     "<p class=\"first admonition-title\" style=\"font-weight: bold;\">Tip</p>\n",
-    "<p class=\"last\">We catch the exception with a <tt class=\"docutils literal\">try</tt>/<tt class=\"docutils literal\">except</tt> pattern to be able to print it.\n",
-    "We also set the <tt class=\"docutils literal\">error_score</tt> parameter to <tt class=\"docutils literal\">raise</tt> to raise the exception\n",
-    "as early as possible. Otherwise, this code would raise a warning in the output\n",
-    "for each cross-validation fold before raising the exception.</p>\n",
+    "<p class=\"last\">We use a <tt class=\"docutils literal\">try</tt>/<tt class=\"docutils literal\">except</tt> block to catch possible <tt class=\"docutils literal\">ValueError</tt>s and print them\n",
+    "if they occur. By setting <tt class=\"docutils literal\"><span class=\"pre\">error_score=\"raise\"</span></tt>, we ensure that the exception\n",
+    "is raised immediately when an error is encountered. Without this setting, the\n",
+    "code would show a warning for each cross-validation split before raising the\n",
+    "exception. You can try using the default <tt class=\"docutils literal\">error_score</tt> to better understand\n",
+    "what this means.</p>\n",
     "</div>\n",
     "We get an exception because the default scorer has its positive label set to\n",
     "one (`pos_label=1`), which is not our case (our positive label is \"donated\").\n",
