--- a/notebooks/metrics_ex_01.ipynb
+++ b/notebooks/metrics_ex_01.ipynb
@@ -10,7 +10,7 @@
     "However, we did not use it with a cross-validation. This exercise aims at\n",
     "practicing and implementing cross-validation.\n",
     "\n",
-    "We will reuse the blood transfusion dataset."
+    "Here we use the blood transfusion dataset."
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "Create a `StratifiedKFold` cross-validation object. Then use it inside the\n",
-    "`cross_val_score` function to evaluate the decision tree. We will first use\n",
+    "`cross_val_score` function to evaluate the decision tree. We first use\n",
     "the accuracy as a score function. Explicitly use the `scoring` parameter of\n",
     "`cross_val_score` to compute the accuracy (even if this is the default score).\n",
     "Check its documentation to learn how to do that."
@@ -93,12 +93,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now add a bit of complexity. We would like to compute the precision of\n",
+    "We now add a bit of complexity. We would like to compute the precision of\n",
     "our model. However, during the course we saw that we need to mention the\n",
     "positive label which in our case we consider to be the class `donated`.\n",
     "\n",
-    "We will show that computing the precision without providing the positive label\n",
-    "will not be supported by scikit-learn because it is indeed ambiguous."
+    "We can show that computing the precision without providing the positive label\n",
+    "is not supported by scikit-learn because it is indeed ambiguous."
    ]
   },
   {
@@ -173,10 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cross_val_score` will only compute a single score provided to the `scoring`\n",
-    "parameter. The function `cross_validate` allows the computation of multiple\n",
-    "scores by passing a list of string or scorer to the parameter `scoring`, which\n",
-    "could be handy.\n",
+    "`cross_val_score` can compute one score at a time, as specified by the scoring\n",
+    "parameter. In contrast, cross_validate can compute multiple scores by passing\n",
+    "a list of strings or scorers to the scoring parameter\n",
     "\n",
     "Import `sklearn.model_selection.cross_validate` and compute the accuracy and\n",
     "balanced accuracy through cross-validation. Plot the cross-validation score\n",
