--- a/notebooks/cross_validation_baseline.ipynb
+++ b/notebooks/cross_validation_baseline.ipynb
@@ -172,6 +172,67 @@
     "of the median does not make much of a difference but this could have been the\n",
     "case for dataset with extreme outliers."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, let us see what happens if we measure the generalization performance\n",
+    "using R\u00b2 rather than mean absolute error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_dummy = cross_validate(\n",
+    "    dummy, data, target, cv=cv, scoring=\"r2\", return_train_score=True, n_jobs=2\n",
+    ")\n",
+    "r2_train_score_dummy_regressor = pd.Series(\n",
+    "    result_dummy[\"train_score\"], name=\"Dummy regressor\"\n",
+    ")\n",
+    "r2_train_score_dummy_regressor.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The R\u00b2 score is always 0. It can be shown that this is always the case,\n",
+    "because of the [mathematical definition of the R\u00b2\n",
+    "score](https://scikit-learn.org/stable/modules/model_evaluation.html#r2-score-the-coefficient-of-determination).\n",
+    "This helps put your model's R\u00b2 score in perspective: if your model has\n",
+    "an R\u00b2 score higher than 0 then it performs better\n",
+    "than a `DummyRegressor` with `strategy=\"mean\"`; similarly, if the\n",
+    "R\u00b2 score is lower than 0 then your model is worse than the dummy\n",
+    "regressor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Mathematical explanation\n",
+    ":class: dropdown\n",
+    "Recall that the R\u00b2 score is defined as:\n",
+    "\n",
+    "$\n",
+    "R^2 = 1 - \\frac{\\sum_i (y_i - \\hat{y}_i)^2}{\\sum_i (y_i - \\bar{y})^2}\n",
+    "$\n",
+    "\n",
+    "But our model always predicts the mean, i.e. for all $i$,\n",
+    "$\\hat{y}_i = \\bar{y}$, so:\n",
+    "\n",
+    "$\n",
+    "R^2 = 1 - \\frac{\\sum_i (y_i - \\hat{y}_i)^2}{\\sum_i (y_i - \\bar{y})^2}\n",
+    "    = 1 - \\frac{\\sum_i (y_i - \\bar{y}  )^2}{\\sum_i (y_i - \\bar{y})^2}\n",
+    "    = 1 - 1\n",
+    "    = 0.\n",
+    "$\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
