--- a/notebooks/cross_validation_time.ipynb
+++ b/notebooks/cross_validation_time.ipynb
@@ -281,9 +281,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, we see that our model is not magical anymore. Indeed, it\n",
-    "performs worse than just predicting the mean of the target. We can visually\n",
-    "check what we are predicting."
+    "In this case, we see that our model is not magical anymore. Remember that a\n",
+    "negative $R^2$ means that the regressor performs worse than always predicting\n",
+    "the mean of the target. We can visually check what we are predicting as follows:"
    ]
   },
   {
@@ -366,7 +366,13 @@
     "cross-validation strategy which do not respect some assumptions such as having\n",
     "i.i.d data. It might lead to misleading outcomes, creating the false\n",
     "impression that a predictive model performs well when it may not be the case\n",
-    "in the intended real-world scenario."
+    "in the intended real-world scenario.\n",
+    "\n",
+    "scikit-learn offers useful tools for time-series analysis apart from\n",
+    "`TimeSeriesSplit`, (see for instance the [Time-related feature engineering\n",
+    "example](https://scikit-learn.org/stable/auto_examples/applications/plot_cyclical_feature_engineering.html)\n",
+    "in the documentation), and scikit-learn models can yield even better results\n",
+    "when combined with other specialized libraries."
    ]
   }
  ],
