--- a/notebooks/cross_validation_baseline.ipynb
+++ b/notebooks/cross_validation_baseline.ipynb
@@ -61,9 +61,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by running the cross-validation for a simple decision tree regressor\n",
-    "which is our model of interest. Besides, we will store the testing error in a\n",
-    "pandas series to make it easier to plot the results."
+    "We start by running the cross-validation for a simple decision tree regressor.\n",
+    "Here we compute the testing errors in terms of the mean absolute error (MAE)\n",
+    "and then we store them in a pandas series to make it easier to plot the\n",
+    "results."
    ]
   },
   {
@@ -177,8 +178,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let us see what happens if we measure the generalization performance\n",
-    "using R\u00b2 rather than mean absolute error:"
+    "Finally, let us see what happens if we measure the test score using $R^2$\n",
+    "instead of the mean absolute error:"
    ]
   },
   {
@@ -191,7 +192,7 @@
     "    dummy, data, target, cv=cv, scoring=\"r2\", return_train_score=True, n_jobs=2\n",
     ")\n",
     "r2_train_score_dummy_regressor = pd.Series(\n",
-    "    result_dummy[\"train_score\"], name=\"Dummy regressor\"\n",
+    "    result_dummy[\"train_score\"], name=\"Dummy regressor train score\"\n",
     ")\n",
     "r2_train_score_dummy_regressor.describe()"
    ]
@@ -200,23 +201,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The R\u00b2 score is always 0. It can be shown that this is always the case,\n",
-    "because of the [mathematical definition of the R\u00b2\n",
-    "score](https://scikit-learn.org/stable/modules/model_evaluation.html#r2-score-the-coefficient-of-determination).\n",
-    "This helps put your model's R\u00b2 score in perspective: if your model has\n",
-    "an R\u00b2 score higher than 0 then it performs better\n",
-    "than a `DummyRegressor` with `strategy=\"mean\"`; similarly, if the\n",
-    "R\u00b2 score is lower than 0 then your model is worse than the dummy\n",
-    "regressor."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The $R^2$ score is always 0. It can be shown that this is always the case,\n",
+    "because of its mathematical definition. If you are interested in the proof,\n",
+    "unfold the dropdown below.\n",
+    "\n",
     "```{admonition} Mathematical explanation\n",
     ":class: dropdown\n",
-    "Recall that the R\u00b2 score is defined as:\n",
+    "Recall that the $R^2$ score is defined as:\n",
     "\n",
     "$\n",
     "R^2 = 1 - \\frac{\\sum_i (y_i - \\hat{y}_i)^2}{\\sum_i (y_i - \\bar{y})^2}\n",
@@ -231,7 +222,47 @@
     "    = 1 - 1\n",
     "    = 0.\n",
     "$\n",
-    "```"
+    "```\n",
+    "\n",
+    "This helps put your model's $R^2$ score in perspective: if your model has an\n",
+    "$R^2$ score higher than 0 then it performs better than a `DummyRegressor` with\n",
+    "`strategy=\"mean\"`; similarly, if the $R^2$ score is lower than 0 then your\n",
+    "model is worse than the dummy regressor. For the test score, we observe\n",
+    "something similar, but with an additional effect coming from the dataset\n",
+    "variations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2_test_score_dummy_regressor = pd.Series(\n",
+    "    result_dummy[\"test_score\"], name=\"Dummy regressor test score\"\n",
+    ")\n",
+    "r2_test_score_dummy_regressor.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In conclusion, $R^2$ is a normalized metric, which makes it independent of the\n",
+    "physical unit of the target variable, unlike MAE. A $R^2$ score of 0.0 is the\n",
+    "performance of a model that always predicts the mean observed value of the\n",
+    "target, while 1.0 corresponds to a model that predicts exactly the observed\n",
+    "target variable for each given input observation. Notice that it is only\n",
+    "possible to reach 1.0 if the target variable is a deterministic function of\n",
+    "the available input features. In practice, external factors often introduce\n",
+    "variability in the target that cannot be explained by the available features.\n",
+    "Therefore, the $R^2$ score of an optimal model is typically less than 1.0, not\n",
+    "due to a fail in the model, but because the input features alone are\n",
+    "insufficient to deterministically predict the target.\n",
+    "\n",
+    "Overall, $R^2$ represents the proportion of the target's variability explained\n",
+    "by the model, while MAE, which retains the physical units of the target, can\n",
+    "be helpful for reporting errors in those units."
    ]
   }
  ],
