--- a/notebooks/cross_validation_baseline.ipynb
+++ b/notebooks/cross_validation_baseline.ipynb
@@ -229,7 +229,8 @@
     "`strategy=\"mean\"`; similarly, if the $R^2$ score is lower than 0 then your\n",
     "model is worse than the dummy regressor. For the test score, we observe\n",
     "something similar, but with an additional effect coming from the dataset\n",
-    "variations:"
+    "variations: the mean target value measured on the testing set is slightly\n",
+    "different from the mean target value measured on the training set."
    ]
   },
   {
@@ -257,8 +258,9 @@
     "the available input features. In practice, external factors often introduce\n",
     "variability in the target that cannot be explained by the available features.\n",
     "Therefore, the $R^2$ score of an optimal model is typically less than 1.0, not\n",
-    "due to a fail in the model, but because the input features alone are\n",
-    "insufficient to deterministically predict the target.\n",
+    "due to a limitation of the machine learning algorithm itself, but because\n",
+    "the chosen input features are fundamentally not informative enough to\n",
+    "deterministically predict the target.\n",
     "\n",
     "Overall, $R^2$ represents the proportion of the target's variability explained\n",
     "by the model, while MAE, which retains the physical units of the target, can\n",
