--- a/notebooks/03_categorical_pipeline_ex_02.ipynb
+++ b/notebooks/03_categorical_pipeline_ex_02.ipynb
@@ -155,6 +155,68 @@
    "source": [
     "# Write your code here."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "\n",
+    "From an accuracy point of view, the result is almost exactly the same. The\n",
+    "reason is that `HistGradientBoostingClassifier` is expressive and robust\n",
+    "enough to deal with misleading ordering of integer coded categories (which was\n",
+    "not the case for linear models).\n",
+    "\n",
+    "However from a computation point of view, the training time is much longer:\n",
+    "this is caused by the fact that `OneHotEncoder` generates more features than\n",
+    "`OrdinalEncoder`; for each unique categorical value a column is created.\n",
+    "\n",
+    "Note that the current implementation `HistGradientBoostingClassifier` is still\n",
+    "incomplete, and once sparse representation are handled correctly, training\n",
+    "time might improve with such kinds of encodings.\n",
+    "\n",
+    "The main take away message is that arbitrary integer coding of categories is\n",
+    "perfectly fine for `HistGradientBoostingClassifier` and yields fast training\n",
+    "times.\n",
+    "\n",
+    "Which encoder should I use?\n",
+    "\n",
+    "|                  | Meaningful order              | Non-meaningful order |\n",
+    "| ---------------- | ----------------------------- | -------------------- |\n",
+    "| Tree-based model | `OrdinalEncoder`              | `OrdinalEncoder` with reasonable depth    |\n",
+    "| Linear model     | `OrdinalEncoder` with caution | `OneHotEncoder`      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "<div class=\"admonition important alert alert-info\">\n",
+    "<p class=\"first admonition-title\" style=\"font-weight: bold;\">Important</p>\n",
+    "<ul class=\"last simple\">\n",
+    "<li><tt class=\"docutils literal\">OneHotEncoder</tt>: always does something meaningful, but can be unnecessary\n",
+    "slow with trees.</li>\n",
+    "<li><tt class=\"docutils literal\">OrdinalEncoder</tt>: can be detrimental for linear models unless your category\n",
+    "has a meaningful order and you make sure that <tt class=\"docutils literal\">OrdinalEncoder</tt> respects this\n",
+    "order. Trees can deal with <tt class=\"docutils literal\">OrdinalEncoder</tt> fine as long as they are deep\n",
+    "enough. However, when you allow the decision tree to grow very deep, it might\n",
+    "overfit on other features.</li>\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next to one-hot-encoding and ordinal encoding categorical features,\n",
+    "scikit-learn offers the [`TargetEncoder`](https://scikit-learn.org/stable/modules/preprocessing.html#target-encoder).\n",
+    "This encoder is well suited for nominal, categorical features with high\n",
+    "cardinality. This encoding strategy is beyond the scope of this course,\n",
+    "but the interested reader is encouraged to explore this encoder."
+   ]
   }
  ],
  "metadata": {
