--- a/notebooks/03_categorical_pipeline_sol_02.ipynb
+++ b/notebooks/03_categorical_pipeline_sol_02.ipynb
@@ -245,8 +245,8 @@
     "not the case for linear models).\n",
     "\n",
     "However from a computation point of view, the training time is much longer:\n",
-    "this is caused by the fact that `OneHotEncoder` generates approximately 10\n",
-    "times more features than `OrdinalEncoder`.\n",
+    "this is caused by the fact that `OneHotEncoder` generates more features than\n",
+    "`OrdinalEncoder`; for each unique categorical value a column is created.\n",
     "\n",
     "Note that the current implementation `HistGradientBoostingClassifier` is still\n",
     "incomplete, and once sparse representation are handled correctly, training\n",
@@ -259,42 +259,45 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which encoder should I use?\n",
+    "\n",
+    "|                  | Meaningful order              | Non-meaningful order |\n",
+    "| ---------------- | ----------------------------- | -------------------- |\n",
+    "| Tree-based model | `OrdinalEncoder`              | `OrdinalEncoder` with reasonable depth    |\n",
+    "| Linear model     | `OrdinalEncoder` with caution | `OneHotEncoder`      |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "tags": [
-     "solution"
-    ]
+    "lines_to_next_cell": 0
    },
    "source": [
     "<div class=\"admonition important alert alert-info\">\n",
     "<p class=\"first admonition-title\" style=\"font-weight: bold;\">Important</p>\n",
-    "<p>Which encoder should I use?</p>\n",
-    "<table border=\"1\" class=\"docutils\">\n",
-    "<thead valign=\"bottom\">\n",
-    "<tr><th class=\"head\"></th>\n",
-    "<th class=\"head\">Meaningful order</th>\n",
-    "<th class=\"head\">Non-meaningful order</th>\n",
-    "</tr>\n",
-    "</thead>\n",
-    "<tbody valign=\"top\">\n",
-    "<tr><td>Tree-based model</td>\n",
-    "<td><tt class=\"docutils literal\">OrdinalEncoder</tt></td>\n",
-    "<td><tt class=\"docutils literal\">OrdinalEncoder</tt></td>\n",
-    "</tr>\n",
-    "<tr><td>Linear model</td>\n",
-    "<td><tt class=\"docutils literal\">OrdinalEncoder</tt> with caution</td>\n",
-    "<td><tt class=\"docutils literal\">OneHotEncoder</tt></td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>\n",
     "<ul class=\"last simple\">\n",
     "<li><tt class=\"docutils literal\">OneHotEncoder</tt>: always does something meaningful, but can be unnecessary\n",
     "slow with trees.</li>\n",
     "<li><tt class=\"docutils literal\">OrdinalEncoder</tt>: can be detrimental for linear models unless your category\n",
     "has a meaningful order and you make sure that <tt class=\"docutils literal\">OrdinalEncoder</tt> respects this\n",
     "order. Trees can deal with <tt class=\"docutils literal\">OrdinalEncoder</tt> fine as long as they are deep\n",
-    "enough.</li>\n",
+    "enough. However, when you allow the decision tree to grow very deep, it might\n",
+    "overfit on other features.</li>\n",
     "</ul>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next to one-hot-encoding and ordinal encoding categorical features,\n",
+    "scikit-learn offers the [`TargetEncoder`](https://scikit-learn.org/stable/modules/preprocessing.html#target-encoder).\n",
+    "This encoder is well suited for nominal, categorical features with high\n",
+    "cardinality. This encoding strategy is beyond the scope of this course,\n",
+    "but the interested reader is encouraged to explore this encoder."
    ]
   }
  ],
